# Multilingual-Graph-RAG

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  ruff.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: __init__.py  auth.py  documents.py  graph.py  health.py  ingest.py  jobs.py  query.py
backend/app/api/v1/schemas/: __init__.py  auth.py  document.py  graph.py  health.py  ingest.py  query.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  milvus.py  postgres.py  redis.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_create_users.py
backend/app/db/models/: __init__.py  document.py  job.py  query_log.py  user.py
backend/app/graph/: __init__.py  cypher_queries.py  entity_linker.py  graph_builder.py  neo4j_client.py  schema.py
backend/app/ingestion/: __init__.py  chunker.py  indexing.py  ner_extractor.py  pipeline.py  tasks.py
backend/app/ingestion/parsers/: __init__.py  base.py  html_parser.py  pdf_parser.py  xml_parser.py
backend/app/pipeline/: __init__.py  constants.py  embedder.py  generator.py  graph_enricher.py  lang_detect.py  rag_chain.py  reranker.py  retriever.py  streaming.py  types.py
backend/app/services/: auth_service.py  health_service.py  user_service.py
backend/app/workers/: __init__.py  celery_app.py  monitor.py
backend/scripts/: normalize_sources.py
backend/tests/: __init__.py  conftest.py  doubles.py
backend/tests/e2e/: test_full_pipeline.py
backend/tests/integration/: test_auth_endpoint.py  test_graph_queries.py  test_health_endpoint.py  test_ingest_endpoint.py  test_query_endpoint.py
backend/tests/unit/: test_chunker.py  test_embedder.py  test_lang_detect.py  test_ner_extractor.py  test_rag_chain.py  test_security.py
data/scripts/: build_graph.py  download_eurlex_xml.py  download_multieurlex.py  ingest_to_milvus.py  validate_data.py
docs/: api_reference.md  architecture.md  data_pipeline.md  demo_queries.md  deployment.md  graph_schema.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  documents.ts  graph.ts  ingest.ts  search.ts
frontend/src/components/auth/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/components/graph/: EntityTooltip.tsx  GraphControls.tsx  GraphViewer.tsx  RelationshipLegend.tsx
frontend/src/components/layout/: Navbar.tsx  PageWrapper.tsx  Sidebar.tsx
frontend/src/components/results/: AnswerStream.tsx  ChunkCard.tsx  LanguageBadge.tsx  ResultsPanel.tsx  ScoreBadge.tsx
frontend/src/components/search/: FilterPanel.tsx  LanguageSelect.tsx  SearchBar.test.tsx  SearchBar.tsx
frontend/src/components/ui/: Badge.tsx  Button.test.tsx  Button.tsx  ErrorBoundary.tsx  Input.tsx  Spinner.tsx  Toast.tsx
frontend/src/components/upload/: DocumentList.tsx  JobStatus.tsx  UploadZone.tsx
frontend/src/config/: env.ts  languages.ts
frontend/src/hooks/: useAuth.ts  useGraph.ts  useIngest.ts  useSearch.ts  useStreamingAnswer.ts
frontend/src/pages/: AdminPage.tsx  DocumentsPage.tsx  GraphExplorerPage.tsx  LoginPage.tsx  SearchPage.tsx
frontend/src/store/: authStore.ts  graphStore.ts  queryStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: auth.types.ts  document.types.ts  graph.types.ts  query.types.ts
infra/k8s/: configmap.yaml  deployment.yaml  service.yaml
infra/monitoring/: prometheus.yml
infra/nginx/: nginx.conf
