[project]
name = "multilingual-graph-rag-backend"
version = "0.1.0"
description = "Backend for the Multilingual Graph RAG Platform."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching local services",
    "e2e: end-to-end tests across the full stack",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
