[project]
name = "multilingual-graph-rag-backend"
version = "0.1.0"
description = "Backend for the Multilingual Graph RAG Platform."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching local services",
    "e2e: end-to-end tests across the full stack",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"**/__init__.py" = ["F401"]
"app/core/config.py" = ["S105"]
"app/core/security.py" = ["S105"]
"app/api/v1/schemas/auth.py" = ["S105"]
"app/db/redis.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
