[project]
name = "multilingual-graph-rag-backend"
version = "0.1.0"
description = "Backend for the Multilingual Graph RAG Platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.32.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.35,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<1.15.0",
    "bcrypt>=4.2.0,<5.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "structlog>=24.4.0,<25.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "email-validator>=2.2.0,<3.0.0",
    "neo4j>=5.25.0,<6.0.0",
    "setuptools>=69.0.0,<70.0.0",
    "pymilvus>=2.4.0,<2.5.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "numpy>=1.26.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "langdetect>=1.0.9,<2.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2.0,<3.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "fasttext-wheel>=0.9.2,<0.10.0",
]

[dependency-groups]
ci = [
    "ruff==0.15.14",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
]
dev = [
    { include-group = "ci" },
    "datasets>=2.20.0,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=17.0.0,<20.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching local services",
    "e2e: end-to-end tests across the full stack",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"**/__init__.py" = ["F401"]
"app/core/config.py" = ["S105"]
"app/core/security.py" = ["S105"]
"app/api/v1/schemas/auth.py" = ["S105"]
"app/db/redis.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
